@@ -174,6 +174,12 @@
     <view name="last24h">
       <param name="start"         value="-24hours" />
       <param name="description"   value="Last 24 hours graph" />
+
+      <!-- graph for embedding into other GUI systems -->
+      <view name="embedded">
+         <param name="description"   value="" />
+         <param name="rrd-params"   value="--full-size-mode" />
+      </view>
     </view>
 
     <!-- Last week graph -->
