@@ -1,3 +1,8 @@
+2011-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* xmlconfig/defaults.xml: new view: "embedded" for external GUI
+	systems
+
 2011-05-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector.pm (beforeRun): Collector
